--- a/app/EventDetails.html
+++ b/app/EventDetails.html
@@ -7,10 +7,14 @@
   <link rel="stylesheet" href="/css/app.css" />
 </head>
 <body>
-  <div class="container">
+  <div class="container" ng-cloak>
     <div class="navbar">
       <div class="navbar-inner">
-        <ul class="nav"></ul>
+        <ul class="nav">
+          <li>
+            <a href="/NewEvent.html">Create Event</a>
+          </li>
+        </ul>
       </div>
     </div>
     <div ng-controller="EventController" style="padding:0px 20px;">
@@ -39,8 +43,20 @@
       </div>
       <hr />
       <h3>Sessions</h3>
+      Order By:
+      <select ng-model="sortorder" class="input-small">
+        <option selected value="name">Name</option>
+        <option value="-upVoteCount">Votes</option>
+      </select>
+      Show:
+      <select ng-model="query.level" class="input-medium">
+        <option selected value="">All</option>
+        <option value="introductory">Introductory</option>
+        <option value="intermediate">Intermediate</option>
+        <option value="advanced">Advanced</option>
+      </select>
       <ul class="thumbnails">
-        <li ng-repeat="session in event.sessions">
+        <li ng-repeat="session in event.sessions | orderBy:sortorder | filter:query">
           <div class="row session">
             <div class="span0 well votingWidget">
               <div class="votingButton" ng-click="upVoteSession(session)">
@@ -56,7 +72,7 @@
             <div class="well span9">
               <h4 class="well-title">{{session.name}}</h4>
               <h6 style="margin-top:-10px">{{session.creatorName}}</h6>
-              <span>Duration: {{session.duration}}</span>
+              <span>Duration: <span ng-bind-html="session.duration | durations"></span></span>
               <br />
               <span>Level: {{session.level}}</span>
               <p>{{session.abstract}}</p>
@@ -73,6 +89,7 @@
     <script src="/lib/angular/angular-sanitize.js" type="text/javascript"></script>
     <script src="/js/app.js" type="text/javascript"></script>
     <script src="/js/controllers/EventController.js" type="text/javascript"></script>
+    <script src="/js/filters.js" type="text/javascript"></script>
   </div>
 </body>
 </html>
