--- a/app/EventDetails.html
+++ b/app/EventDetails.html
@@ -88,6 +88,7 @@
     <script src="/lib/angular/angular.js" type="text/javascript"></script>
     <script src="/lib/angular/angular-sanitize.js" type="text/javascript"></script>
     <script src="/js/app.js" type="text/javascript"></script>
+    <script src="/js/services/EventData.js" type="text/javascript"></script>
     <script src="/js/controllers/EventController.js" type="text/javascript"></script>
     <script src="/js/filters.js" type="text/javascript"></script>
   </div>
